src/stage2/hebbian/trine_hebbian.h



typedef struct trine_hebbian_state trine_hebbian_state_t;


/* Per-source training weight entry */
#define TRINE_MAX_SOURCES  8
#define TRINE_SOURCE_NAME_LEN 16

typedef struct {
    char  name[TRINE_SOURCE_NAME_LEN];
    float weight;
} trine_source_weight_t;


typedef struct {
    float    similarity_threshold; /* s1 > thresh = similar. Default: 0.5 */
    int32_t  freeze_threshold;     /* T for quantization. 0 = auto         */
    float    freeze_target_density;/* Target density for auto-T. Def: 0.33 */
    uint32_t cascade_cells;        /* Cascade mixing cells. Default: 512   */
    uint32_t cascade_depth;        /* Default inference depth. Default: 4  */
    int      projection_mode;      /* 0=sign, 1=diagonal. Default: 0      */

    /* Weighted Hebbian (Phase A1) */
    int      weighted_mode;        /* 0=binary sign, 1=weighted magnitude   */
    float    pos_scale;            /* positive magnitude scale (default 10) */
    float    neg_scale;            /* negative magnitude scale (default 3)  */

    /* Dataset rebalancing (Phase A2) */
    trine_source_weight_t source_weights[TRINE_MAX_SOURCES];
    int      n_source_weights;     /* Number of configured source weights   */

    /* Sparse cross-channel projection (Phase D1) */
    uint32_t sparse_k;             /* 0=disabled, >0=top-K per output row   */

    /* Block-diagonal projection (v1.0.3) */
    int      block_diagonal;       /* 0 = use existing mode, 1 = block-diagonal */

    /* RNG seed for deterministic downsampling (thread-safe)                 */
    uint64_t rng_seed;             /* 0 = derive from pairs_observed         */
} trine_hebbian_config_t;


/* Training metrics. */
typedef struct {
    int64_t  pairs_observed;       /* Total pairs fed to observe() */
    int32_t  max_abs_counter;      /* Max |counter| across all weights */
    uint32_t n_positive_weights;   /* Counters > 0 */
    uint32_t n_negative_weights;   /* Counters < 0 */
    uint32_t n_zero_weights;       /* Counters == 0 */
    float    weight_density;       /* Fraction non-zero after freeze */
    int32_t  effective_threshold;  /* Threshold used (explicit or auto) */
} trine_hebbian_metrics_t;