src/index/trine_route.h


/* Recall presets — trade speed for recall completeness */
#define TRINE_RECALL_FAST      0   /* 1 probe/band, cap 200 — maximum speed */
#define TRINE_RECALL_BALANCED  1   /* 3 probes/band, cap 500 — default */
#define TRINE_RECALL_STRICT    2   /* 5 probes/band, cap 2000 — maximum recall */

typedef struct trine_route trine_route_t;


typedef struct {
    int candidates_checked;    /* How many full comparisons were done */
    int total_entries;         /* Total entries in the index */
    float candidate_ratio;    /* candidates_checked / total_entries */
    float speedup;            /* total_entries / candidates_checked */
    const char *recall_mode;  /* Name of active recall preset (or NULL) */
} trine_route_stats_t;


/* Create a routed index. Config controls comparison (lens, threshold, calibration). */
trine_route_t *trine_route_create(const trine_s1_config_t *config);


/* Add an embedding to the routed index. Returns assigned index (0-based), -1 on error.
 * Optional tag string (can be NULL). */
int trine_route_add(trine_route_t *rt, const uint8_t emb[240], const char *tag);


/* Query: find best match using routing for candidate selection.
 * Only entries sharing at least one bucket with the query are compared.
 * stats (if non-NULL) receives query statistics. */
trine_s1_result_t trine_route_query(const trine_route_t *rt,
                                     const uint8_t candidate[240],
                                     trine_route_stats_t *stats);


/* Get entry count. */
int trine_route_count(const trine_route_t *rt);


/* Get tag for an entry. */
const char *trine_route_tag(const trine_route_t *rt, int index);


/* Free the routed index. */
void trine_route_free(trine_route_t *rt);


/* Save/load routed index to/from file. Format (v3):
 *   Magic:        "TRRT" (4 bytes)
 *   Version:      uint32_t = 3
 *   Endian check: uint32_t = 0x01020304 (byte order marker)
 *   Flags:        uint32_t = 0 (reserved for future use)
 *   Checksum:     uint64_t = FNV-1a over payload after header
 *   --- payload ---
 *   Count + config + recall_mode + entries + bucket tables
 *
 * v1 files (no recall_mode, no checksum) and v2 files (recall_mode, no
 * checksum) are still loadable.
 * Returns 0 on success, -1 on error. */
int trine_route_save(const trine_route_t *rt, const char *path);

trine_route_t *trine_route_load(const char *path);


/* Set the recall mode for a routed index. Adjusts probes and candidate cap.
 * Can be called at any time (takes effect on next query).
 * Returns 0 on success, -1 on invalid mode. */
int trine_route_set_recall(trine_route_t *rt, int mode);